--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- header momentaneamente senza contenuto-->
+      <!-- header diviso in una parte con img e titolo e un navigatore-->
       <header>
         <div class="header-img">
           <div class="testo">
