--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <span>ANOTHER BEAUTIFUL ORGANIC THEME</span>
           </div>
         </div>
+        <!-- barra di navigazione con lista -->
         <nav>
           <ul>
             <li>HOME</li>
@@ -26,21 +27,33 @@
             <li>CONTACT</li>
           </ul>
         </nav>
-
       </header>
-      <!-- blocco centrale -->
+
+      <!-- blocco centrale diviso in tre colonne: due aside e un article centrale-->
       <main>
-        <!-- blocco centrale parte a sinistra -->
+        <!-- blocco centrale parte a sinistra con un piccolo titolo con immagine e diversi link-->
         <aside class="main-left">
-
+          <div class="left-title">
+            <img src="img/rss.png" alt="rss icon">
+            <h4>Organic Themes</h4>
+          </div>
+          <ul>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+            <li><a href="#">How to pick a wordpress theme for 2019</a></li>
+          </ul>
         </aside>
-        <!-- blocco centrale parte nel mezzo -->
+        <!-- parte centrale del main con un article contenente un titolo e un paragrafo -->
         <article class="main-center">
-
+          <h2>Article</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
         <!-- blocco centrale parte a destra -->
         <aside class="main-right">
-          <!-- parte destra del blocco centrale. contiene due blocchi momentaneamente vuoti -->
+          <!-- parte destra del blocco centrale. contiene due blocchi con titolo e un po' di testo -->
           <div></div>
           <div></div>
         </aside>
