--- a/index.html
+++ b/index.html
@@ -51,15 +51,49 @@
           <h2>Article</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
-        <!-- blocco centrale parte a destra -->
+        <!-- blocco centrale aside di destra -->
         <aside class="main-right">
           <!-- parte destra del blocco centrale. contiene due blocchi con titolo e un po' di testo -->
-          <div></div>
-          <div></div>
+          <div>
+            <h3>Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+          </div>
+          <div>
+            <h3>Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+          </div>
+          <div>
+            <h3>Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+          </div>
+          <div>
+            <h3>Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+          </div>
+          <div>
+            <h3>Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+          </div>
         </aside>
       </main>
-      <!-- footer momentaneamente senza contenuto-->
-      <footer></footer>
+      <!-- footer con una prima parte di firma e una seconda con icone social-->
+      <footer>
+        <div class="firma">
+          pagina realizzata da Organic Websites
+        </div>
+        <!-- blocco link social -->
+        <div>
+        <div class="facebook">
+          <img src="img/facebook.png" alt="facebook icon">
+        </div>
+        <div class="instagram">
+          <img src="img/instagram.jfif" alt="instagram icon">
+        </div>
+        <div class="github">
+          <img src="img/github.png" alt="github icon">
+        </div>
+        </div>
+      </footer>
 
     </div>
 
