--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/679772225c.js" crossorigin="anonymous"></script>
     <title>Wordpress Template Bonus</title>
   </head>
   <body>
@@ -11,6 +12,11 @@
       <header>
         <div class="header-img">
           <div class="testo">
+          <div class="logo">
+            <i class="fas fa-mountain"></i>
+            <i class="fas fa-mountain"></i>
+            <i class="fas fa-mountain"></i>  
+          </div>
           <h1>NATURAL</h1>
           <span>ANOTHER BEAUTIFUL ORGANIC THEME</span>
           </div>
@@ -84,13 +90,13 @@
         <!-- blocco link social -->
         <div>
         <div class="facebook">
-          <img src="img/facebook.png" alt="facebook icon">
+          <i class="fab fa-facebook-square"></i>
         </div>
         <div class="instagram">
-          <img src="img/instagram.jfif" alt="instagram icon">
+          <i class="fab fa-instagram"></i>
         </div>
         <div class="github">
-          <img src="img/github.png" alt="github icon">
+          <i class="fab fa-github"></i>
         </div>
         </div>
       </footer>
